fix: use flex to avoid overflow

--- a/client/main.css
+++ b/client/main.css
@@ -13,6 +13,7 @@ body {
 }
 
 #root {
+  display: grid;
   width: 100%;
   min-height: 100vh;
 }
